# vit

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  COMMANDS.md  CONTRIBUTING.md  Makefile  README.md  VOCAB.md  bsky_oauth.js  build.js  firehose.js  hack  package-lock.json  package.json  pds_record.js  plc-register.py  plc_register.js  plc_register.py  plc_test.js  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: config.yml
.vit/: README.md  caps.jsonl  config.json  skills.jsonl
docs/: ARCHITECTURE.md  CNAME  DOCTRINE.md  GET-STARTED.md  VOCAB.md  client-metadata.json  index.html
explore/: Makefile  migrate-cap-requests.sql  package.json  schema.sql  wrangler.toml
lab/: README.md  plc-register.js  plc-verify.js
site/: Makefile  package-lock.json  package.json  wrangler.toml
src/: cli.js  postinstall.js
test/: adopt.test.js  agent.test.js  beacon-cmd.test.js  beacon.test.js  cap-ref.test.js  cap.test.js  doctor.test.js  error-format.test.js  explore-cursor-resume.test.js  explore-cursor.test.js  explore-jetstream-race.test.js  explore.test.js  follow.test.js  hack.test.js  helpers.js  inbox.test.js  init.test.js  jetstream-help.test.js  json-output.test.js  learn.test.js  link.test.js  login-success.test.js  login.test.js  pack.test.js  pds.test.js  postinstall.test.js  remix.test.js  sandbox.test.js  setup.test.js  ship-cap.test.js  ship-request.test.js  ship-skill.test.js  ship.test.js  skill-install.test.js  skill-ref.test.js  skim-skills.test.js  skim.test.js  trust-gate.test.js  version.test.js  vet-skill.test.js  (+4 more)
(+65 files in other folders)
