[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vit"
version = "0.1.0"
description = "Minimal DID:PLC genesis op generator + registrar"
requires-python = ">=3.9"
dependencies = [
    "cryptography",
    "dag-cbor",
    "base58",
    "requests",
]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
]

[project.scripts]
plc-register = "plc_register:main"

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["plc_register.py"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["test"]
